# flf-epistack-submission

./: .env.example  README.md  pyproject.toml  render.yaml
.github/workflows/: pages.yml
carlo-baseline/: INDEX.md  README.md
carlo-baseline/evidence/: 2018-state-dept-cables-biosafety-warnings.md  china-data-withholding-transparency.md  defuse-2018-furin-cleavage-proposal.md  defuse-grant-proposal-blueprint.md  early-cases-without-market-link.md  environmental-samples-wildlife-stall-positivity.md  fbi-doe-cia-lab-leaning-assessments.md  huanan-market-spatial-clustering-early-cases.md  live-susceptible-mammals-on-sale-wuhan-markets.md  menachery-baric-2015-shc014-chimera.md  molecular-clock-tmrca-nov-2019.md  natural-recombination-sarbecoviruses.md  no-close-progenitor-or-intermediate-host.md  odni-ic-split-assessment-2021-2023.md  pangolin-cov-rbd-five-contact-residues.md  proximal-origin-private-doubts-controversy.md  rbd-not-optimal-for-human-ace2.md  sars1-mers-zoonotic-precedent.md  serial-passage-cell-culture-adaptation.md  three-wiv-researchers-sick-nov-2019.md  two-lineages-a-b-multiple-introductions.md  two-zoonotic-introductions-lineages-A-B.md  who-china-2021-extremely-unlikely-walkback.md  wiv-database-offline-sept-2019.md
docs/: architecture.md  judge-contract.md
flf-epistack-contest-main/: CONCLUSION.md
schemas/: evidence-annotation.schema.json  fixed-corpus-experiment.schema.json  framing-experiment.schema.json  source-policy.schema.json
site/: app.js  index.html  styles.css
tests/: test_annotations.py  test_markdown.py  test_server.py
(+85 files in other folders)
