[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "epistemic-audit"
version = "0.1.0"
description = "Versioned epistemic-pipeline annotations and static visualizations"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
test = ["jsonschema>=4.23"]

[project.scripts]
epistack-build = "epistemic_audit.build:main"

[tool.setuptools.packages.find]
where = ["src"]
